--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -2,15 +2,15 @@
   "name": "@saasfly/nextjs",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "build": "contentlayer2 build && bun with-env next build",
-    "clean": "git clean -xdf .next .turbo node_modules",
-    "dev": "bun with-env next dev",
-    "lint": " bun with-env next lint --quiet",
-    "format": "prettier --write '**/*.{js,cjs,mjs,ts,tsx,md,json}'  --ignore-path .prettierignore",
-    "start": "bun with-env next start",
-    "with-env": "dotenv -e ../../.env.local --"
-  },
+"scripts": {
+  "build": "contentlayer2 build && bun with-env next build",
+  "clean": "git clean -xdf .next .turbo node_modules .contentlayer",
+  "dev": "contentlayer2 build && bun with-env next dev",
+  "lint": "bun with-env next lint --quiet",
+  "format": "prettier --write '**/*.{js,cjs,mjs,ts,tsx,md,json}' --ignore-path .prettierignore",
+  "start": "bun with-env next start",
+  "with-env": "dotenv -e ../../.env.local --"
+},
   "dependencies": {
     "@dinero.js/currencies": "2.0.0-alpha.14",
     "@formatjs/intl-localematcher": "0.5.4",
