--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
   ],
   "packageManager": "bun@v1.1.10",
   "dependencies": {
-    "@clerk/nextjs": "^6.20.0"
+    "@clerk/nextjs": "^6.20.0",
+    "@contentlayer2/source-files": "^0.5.8",
+    "contentlayer2": "^0.5.8",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   }
 }
