fix: dependency version mismatch in workspace

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -2,15 +2,15 @@
   "name": "@saasfly/nextjs",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "build": "contentlayer2 build && bun with-env next build",
-  "clean": "git clean -xdf .next .turbo node_modules .contentlayer",
-  "dev": "contentlayer2 build && bun with-env next dev",
-  "lint": "bun with-env next lint --quiet",
-  "format": "prettier --write '**/*.{js,cjs,mjs,ts,tsx,md,json}' --ignore-path .prettierignore",
-  "start": "bun with-env next start",
-  "with-env": "dotenv -e ../../.env.local --"
-},
+  "scripts": {
+    "build": "contentlayer2 build && bun with-env next build",
+    "clean": "git clean -xdf .next .turbo node_modules .contentlayer",
+    "dev": "contentlayer2 build && bun with-env next dev",
+    "lint": "bun with-env next lint --quiet",
+    "format": "prettier --write '**/*.{js,cjs,mjs,ts,tsx,md,json}' --ignore-path .prettierignore",
+    "start": "bun with-env next start",
+    "with-env": "dotenv -e ../../.env.local --"
+  },
   "dependencies": {
     "@dinero.js/currencies": "2.0.0-alpha.14",
     "@formatjs/intl-localematcher": "0.5.4",
@@ -66,14 +66,14 @@
     "prettier": "3.2.5",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.5",
-    "contentlayer2": "0.4.6",
+    "contentlayer2": "^0.5.8",
     "next-contentlayer2": "0.4.6",
     "rehype": "13.0.1",
-    "rehype-autolink-headings": "7.1.0",
-    "rehype-pretty-code": "0.12.3",
-    "rehype-slug": "6.0.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "remark": "15.0.1",
-    "remark-gfm": "4.0.0",
+    "remark-gfm": "^4.0.1",
     "unist-util-visit": "5.0.0",
     "mdast-util-toc": "7.0.0",
     "@next-devtools/core": "0.2.0"
